--- a/package.json
+++ b/package.json
@@ -10,10 +10,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^21.7.1",
+    "@react-native-firebase/auth": "^21.7.1",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "@stripe/stripe-react-native": "0.38.6",
     "expo": "~52.0.28",
+    "expo-file-system": "~18.0.7",
+    "expo-image-picker": "~16.0.4",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-media-library": "~17.0.5",
+    "expo-payments-stripe": "^10.0.1",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.2.0",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native": "0.76.6",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.13.1",
+    "react-native-razorpay": "^2.3.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-upi-payment": "^1.0.5",
+    "react-native-vector-icons": "^10.2.0",
+    "stripe": "^17.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
