--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@stripe/stripe-react-native": "0.38.6",
+    "axios": "^1.7.9",
     "expo": "~52.0.28",
     "expo-file-system": "~18.0.7",
     "expo-image-picker": "~16.0.4",
@@ -36,6 +37,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-upi-payment": "^1.0.5",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "13.12.5",
     "stripe": "^17.6.0"
   },
   "devDependencies": {
